# COSMO_BrainStudio

./: .env.example  .gitignore  README.md  package.json  setup.sh
brains/ArtandMusic2.brain/outputs/code-creation/agent_1766627395070_xbku0d8/: .complete  Makefile  README_LINKCHECK.md  README_add_case_study.md  TRACKING_RECONCILIATION.md  manifest.json  pyproject.toml
brains/ArtandMusic2.brain/outputs/execution/config/: pyproject.toml  qa_harness.json
brains/Math2matics2.brain/outputs/code-creation/agent_1766539771837_90h4nu3/: .complete  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766540049058_1ftjhpj/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766540962048_qnvu71r/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766540962053_ireol81/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766541993033_op0q2y6/: .complete  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766542280435_rsgr6bd/: .complete  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766543291642_15ryvxl/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766547792970_aqtjpym/: .complete  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/code-creation/agent_1766550068051_exsedl9/: .complete  README.md  pyproject.toml  pytest.ini  requirements.txt
brains/Math2matics2.brain/outputs/code-creation/agent_1766554350956_fjwbe0s/: .complete  README.md  manifest.json  pyproject.toml  requirements-dev.txt
brains/Math2matics2.brain/outputs/code-creation/agent_1766554496213_chz9ya7/: .complete  Makefile  manifest.json  pyproject.toml
brains/Math2matics2.brain/outputs/execution/: Makefile  README.md  README_reproducibility.md  pyproject.toml
brains/Math2matics2.brain/outputs/execution/scripts/: reproducibility_check.js  run_e2e_and_update_manifest.py  run_tests.py
brains/Math2matics2.brain/outputs/execution/src/: determinism.py  entrypoint.py  goal_33_toy_experiment.py  io_utils.py  metrics.py  output_paths.py  pipeline.py  plotting.py  run.py  run_pipeline.py
brains/Math2matics2.brain/outputs/execution/tests/: test_determinism.py  test_goal_33_smoke.py  test_pipeline.py  test_pipeline_runnable.py  test_reproducibility.py
brains/Physics2.brain/outputs/code-creation/agent_1766429800561_x1eq349/: .complete  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766430411939_w8zvs5v/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766431635739_72jo504/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766431635741_mfutxxa/: .complete  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766435369689_8307n6x/: .complete  README.md  deliverables-manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766435369695_ff3n77o/: .complete  .pre-commit-config.yaml  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766436853783_spfbwv1/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766438409884_82yeh6g/: .complete  CONTRIBUTING.md  LICENSE  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766438409884_w42j21w/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766440311238_cpnt5ex/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml  requirements.txt
brains/Physics2.brain/outputs/code-creation/agent_1766440491477_mf3ai2a/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766440491478_gse55wb/: .complete  .dockerignore  Dockerfile  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766440491478_l3diqsu/: .complete  README.md  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Physics2.brain/outputs/code-creation/agent_1766440773605_rmmii5d/: .complete  deliverables-manifest.json  manifest.json  pyproject.toml
brains/Psychology2.brain/outputs/code-creation/agent_1766725305310_fqd4vpt/: .complete  pyproject.toml
brains/Psychology2.brain/outputs/execution/: .dockerignore  LICENSE  README.md  environment.manifest.json  package.json  pyproject.toml  pytest.ini  run_pipeline.py  runner.yaml
brains/Psychology2.brain/outputs/execution/configs/: example.yaml
brains/Psychology2.brain/outputs/execution/data/: reference_corpus.jsonl  toy_meta_input.csv
brains/Psychology2.brain/outputs/execution/docs/: doi_test_set_and_provenance.md  integration_doi_fixture_test.md
brains/Psychology2.brain/outputs/execution/gate/: docker_healthcheck.py
brains/Psychology2.brain/outputs/execution/meta_analysis/: demo_runner.py
brains/Psychology2.brain/outputs/execution/outputs/: CHANGELOG.md
brains/Psychology2.brain/outputs/execution/runner/: run_pipeline.py
brains/Psychology2.brain/outputs/execution/schemas/: meta_analysis_input.schema.json
brains/Psychology2.brain/outputs/execution/scripts/: build.py  build_runner.py  ci_run.py  ci_validate_build.py  diagnose_container_loss.py  docker_diagnostics.py  one_command_runner.py  preflight_repro.py  record_versions.py  run_default.py  (+5 more)
(+11271 files in other folders)
