[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
[project]
name = "deterministic-cli-tool"
version = "0.1.0"
description = "Single deterministic CLI entrypoint that runs a canonical pipeline and writes verifiable artifacts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "COSMO" }]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]
[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]
[project.scripts]
run = "src.run:main"
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
filterwarnings = [
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning",
  "ignore:.*distutils.*:DeprecationWarning",
]
[tool.ruff]
line-length = 100
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
