[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "generated_script_1766623998740"
version = "0.1.0"
description = "Validation scaffolding for intake checklist claim cards (schema + CLI + tests)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project", email = "noreply@example.com"}]
dependencies = [
  "jsonschema>=4.21",
  "PyYAML>=6.0.1",
]
[project.optional-dependencies]
test = [
  "pytest>=7.4",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["source"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:jsonschema.*",
]
