[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "minimal-outputs-pipeline"
version = "0.1.0"
description = "Minimal runnable pipeline that writes canonical /outputs artifacts and retries the survey task."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OpenAI Code Interpreter" }]
dependencies = []
[project.scripts]
minimal-outputs-pipeline = "cli:main"
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["pipeline", "artifacts", "survey_retry", "cli"]
[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
