[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "minipipeline"
version = "0.0.0"
description = "Minimal deterministic pipeline that writes run artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
minipipeline = "minipipeline.cli:main"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
