[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outputs-pipeline"
version = "0.1.0"
description = "Deterministic generator for /outputs/ artifacts (README, roadmap, bibliography, coverage matrix)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Project Contributors"}]
dependencies = []

[project.scripts]
generate-outputs = "scripts.generate_outputs:main"
[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
[tool.ci]
# Convention for CI systems: run `python -m scripts.generate_outputs` or `generate-outputs`.
# This section documents the intended entrypoint for pipeline generation.
entrypoint = "generate-outputs"
