[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "generated_script_1766547587041"
version = "0.1.0"
description = "Deterministic entrypoint that writes stable run artifacts and tests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Generated" }]
dependencies = [
  "jsonschema>=4.21",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
