[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"
[project]
name = "generated_script_1766548034720"
version = "0.0.0"
description = "Deterministic generation of results.json and figure.png (mean vs median-of-means)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
dependencies = [
  "numpy==1.26.4",
  "matplotlib==3.8.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
