[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generated_configuration_1766429804913"
version = "0.1.0"
description = "Reproducible benchmark schema + computation validation harness."
readme = "outputs/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI", email = "noreply@openai.com"}]
dependencies = [
  "jsonschema>=4.21",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["outputs*", ".github*", "tests*"]
