[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "sf-gft-diagnostics"
version = "0.1.0"
description = "Continuum-recovery diagnostics and cross-validation tests for spin-foam/GFT renormalization."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI Code Interpreter", email = "noreply@example.com"}]
keywords = ["quantum-gravity", "spin-foams", "group-field-theory", "renormalization", "tensor-networks", "diagnostics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Physics",
  "Intended Audience :: Science/Research",
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1.8", "black>=23.12"]
notebooks = ["jupyterlab>=4.0"]

[project.scripts]
sf-gft-diag = "sf_gft_diagnostics:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sf_gft_diagnostics"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
