[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "generated_script_1766435373331"
version = "0.1.0"
description = "Reproducible toy numerical/symbolic experiments exploring candidate emergent-classicality frameworks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI Code Interpreter"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "sympy>=1.12",
  "matplotlib>=3.7",
  "networkx>=3.1",
  "pandas>=2.0",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "mypy>=1.8",
]
notebooks = [
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[project.scripts]
experiments = "experiments.registry:app"

[tool.hatch.build.targets.wheel]
packages = ["src/experiments"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["src"]
