[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta" 
[project]
name = "benchmark-output-tools"
version = "0.1.0"
description = "Tools for generating schema docs and validating benchmark JSON outputs against JSON Schema."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI (generated)"}]
dependencies = [
  "jsonschema>=4.21",
  "referencing>=0.34",
]
[project.scripts]
schema-docs = "tools.schema_docs:main"
validate-benchmark-outputs = "tools.validate_benchmark_outputs:main" 
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["tools*"]
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
[tool.black]
line-length = 100
target-version = ["py310"]
[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
