[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
[project]
name = "dgpipe"
version = "0.1.0"
description = "Discrete-gravity microstructure to experiment pipeline: simulation, correlators, entanglement diagnostics, inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dgpipe contributors" }]
keywords = ["causal-sets", "discrete-gravity", "analogue-gravity", "correlators", "entanglement", "bayesian-inference"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "xarray>=2023.1.0",
  "networkx>=3.1",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "arviz>=0.16",
  "pymc>=5.10",
  "h5py>=3.9",
  "tqdm>=4.66",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "types-tqdm",
]

[project.scripts]
dgpipe = "dgpipe.cli:main"
[tool.hatch.build.targets.wheel]
packages = ["src/dgpipe"]
[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build", "dist", ".venv"]
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --disable-warnings --maxfail=1 --cov=dgpipe --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
