[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "outputs-repo-skeleton"
version = "0.1.0"
description = "Utilities and documentation for generating a versioned repository skeleton in the outputs directory."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Project Contributors"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I"]  # import sorting via ruff
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
