[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "generated_script_1766440325922"
version = "0.1.0"
description = "Prototype numerical/symbolic experiments with a small reproducible CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenAI Code Interpreter" }]
dependencies = [
  "numpy>=1.26",
  "sympy>=1.12",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]

[project.scripts]
experiments = "main:main"
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]
lint.fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
