[tool.poetry]
name = "generated_configuration_1766440496320"
version = "0.1.0"
description = "Reproducible benchmark/configuration project."
authors = ["OpenAI Code Interpreter <noreply@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "generated_configuration_1766440496320" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.8.4"
black = "^24.10.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
gc176644 = "generated_configuration_1766440496320.__main__:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["I"]
fix = false

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
