[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "artifact-gate"
version = "0.1.0"
description = "Minimal artifact creation success gate: create outputs structure and verify required artifacts are present and non-empty."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "COSMO Runtime"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
artifact-gate = "artifact_gate:main"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
